Minor UI Changes:
Fixed column widths for various reports

--- a/CRM/views/result-client-history-report.ejs
+++ b/CRM/views/result-client-history-report.ejs
@@ -38,13 +38,13 @@
       <table class="table table-bordered px-2 py-2 bg-white">
         <thead class="thead-dark">
           <tr>
-            <th scope="col"></th>
-            <th scope="col">DATE</th>
-            <th scope="col">AGENT</th>
-            <th scope="col">CONTACT 1</th>
-            <th scope="col">CONTACT 2</th>
-            <th scope="col">VISIT TYPE</th>
-            <th scope="col">REMARKS</th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 3%"></th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 12%">DATE</th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 8%">AGENT</th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 8%">CONTACT 1</th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 8%">CONTACT 2</th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 10%">VISIT TYPE</th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 51%">REMARKS</th>
           </tr>
         </thead>
         <tbody>
@@ -65,15 +65,15 @@
                 repContact2.push(result[i].contact2);
               }
               list += '<tr>';
-              list += '<th scope="row">' + k + '</th>';
+              list += '<th scope="row" style="text-align: center; vertical-align: middle; width: 3%">' + k + '</th>';
               var str = result[i].eventTimeIn._d.toString();
               var eventDate = str.substr(0, 15);
-              list += '<td>' + eventDate + '</td>';
-              list += '<td>' + result[i].agentAbbrev + '</td>';
-              list += '<td>' + repContact1[i] + '</td>';
-              list += '<td>' + repContact2[i] + '</td>';
-              list += '<td>' + result[i].eventType + '</td>';
-              list += '<td>' + result[i].eventRemarks + '</td>';
+              list += '<td style="text-align: center; vertical-align: middle; width: 12%">' + eventDate + '</td>';
+              list += '<td style="text-align: center; vertical-align: middle; width: 8%">' + result[i].agentAbbrev + '</td>';
+              list += '<td style="text-align: center; vertical-align: middle; width: 8%">' + repContact1[i] + '</td>';
+              list += '<td style="text-align: center; vertical-align: middle; width: 8%">' + repContact2[i] + '</td>';
+              list += '<td style="text-align: center; vertical-align: middle; width: 10%">' + result[i].eventType + '</td>';
+              list += '<td style="text-align: left; vertical-align: middle; width: 51%">' + result[i].eventRemarks + '</td>';
               list += '</tr>';
               k++;
           }
