--- a/CRM/views/result-contact-history-report.ejs
+++ b/CRM/views/result-contact-history-report.ejs
@@ -39,11 +39,11 @@
       <table class="table table-bordered px-2 py-2 bg-white">
         <thead class="thead-dark">
           <tr>
-            <th scope="col"></th>
-            <th scope="col">DATE</th>
-            <th scope="col">AGENT</th>
-            <th scope="col">VISIT TYPE</th>
-            <th scope="col">REMARKS</th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 3%"></th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 12%">DATE</th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 10%">AGENT</th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 10%">VISIT TYPE</th>
+            <th scope="col" style="text-align: center; vertical-align: middle; width: 65%">REMARKS</th>
           </tr>
         </thead>
         <tbody>
@@ -52,13 +52,13 @@
               var k = 1;
               for (i = 0; i < result.length; i++) {
                 list += '<tr>';
-                list += '<th scope="row">' + k + '</th>';
+                list += '<th scope="row" style="text-align: center; vertical-align: middle; width: 3%">' + k + '</th>';
                 var str = result[i].eventTimeIn._d.toString();
                 var eventDate = str.substr(0, 15);
-                list += '<td>' + eventDate + '</td>';
-                list += '<td>' + result[i].agentAbbrev + '</td>';
-                list += '<td>' + result[i].eventType + '</td>';
-                list += '<td>' + result[i].eventRemarks + '</td>';
+                list += '<td style="text-align: center; vertical-align: middle; width: 12%">' + eventDate + '</td>';
+                list += '<td style="text-align: center; vertical-align: middle; width: 10%">' + result[i].agentAbbrev + '</td>';
+                list += '<td style="text-align: center; vertical-align: middle; width: 10%">' + result[i].eventType + '</td>';
+                list += '<td style="text-align: left; vertical-align: middle; width: 65%">' + result[i].eventRemarks + '</td>';
                 list += '</tr>';
                 k++;
             }
