--- a/CRM/views/change-password.ejs
+++ b/CRM/views/change-password.ejs
@@ -16,6 +16,7 @@
   // Function to check Whether both passwords
   // is same or not.
   function checkPassword(form) {
+      passwordold = form.oldPassword.value;
       password1 = form.newPassword.value;
       password2 = form.newPasswordRetype.value;
 
@@ -34,6 +35,12 @@
       // If Not same return False.
       else if (password1 != password2) {
           alert ("\nPassword did not match: Please try again...")
+          return false;
+      }
+
+      // If old pw = new pw return False.
+      else if (passwordold == password1) {
+          alert ("Please enter a different password")
           return false;
       }
 
