Added ability to dynamically select Month for Dash 1 (Visit Count), Year for Dash 2 (Monthly Team Visits) and refresh the graphs
Added sessionStorage for dropdown selections chosen above

Cleared sessionStorage upon logout

Minor code changes

--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -133,7 +133,12 @@ TESTING
         <a class="dropdown-item" href="/edit-permissions"> Permissions</a>
       <% } %>
         <a class="dropdown-item" href="#"> Settings</a>
-        <a class="dropdown-item" href="/logout"> Log Out</a>
+        <a class="dropdown-item"  id="logOutButton" onclick="" href="/logout"> Log Out</a>
     </div>
+    <script>
+      document.getElementById("logOutButton").addEventListener("click", function() {
+        sessionStorage.clear();
+      });
+    </script>
   </li>
 </ul>
