--- a/CRM/views/view-client.ejs
+++ b/CRM/views/view-client.ejs
@@ -592,7 +592,7 @@
                 <input type="name" class="form-control" id="origClientName" name="origClientName" value="<%= clientName %>" hidden>
                 <input type="name" class="form-control" id="user" name="user" value="<%- user %>" hidden>
                 <div class="table d-none d-md-block">
-                  <table class="table table-bordered px-2 py-2 bg-white">
+                  <table class="table table-bordered px-2 py-2 bg-white" id="clientInfoTable" onclick="">
                     <tbody>
                       <tr>
                         <th style="width: 15%" scope="col" class="align-middle">Client Name:</th>
@@ -1277,6 +1277,14 @@
                     document.getElementById('clientProdPPMobile').disabled = false;
                     document.getElementById('clientProdTPMobile').disabled = false;
                     document.getElementById('clientStatusMobile').disabled = false;
+                  }
+                </script>
+                <script>
+                  function hideTableElems() {
+                    var tbl = document.getElementById("clientInfoTable").rows;
+                    for (r = 0; r < 7; r++){ //tbl.length; r++){
+                        alert(tbl[r].cells[1].innerHTML);
+                    }
                   }
                 </script>
 
